--- a/github-package-registry-maven/pom.xml
+++ b/github-package-registry-maven/pom.xml
@@ -45,8 +45,8 @@
     <servers>
         <server>
             <id>github</id>
-            <username>GITHUB_ACTOR</username>
-            <password>GITHUB_TOKEN</password>
+            <username>${env.GITHU_ACTOR}</username>
+            <password>${env.GITHUB_TOKEN}</password>
         </server>
     </servers>
 
